CHANGES IN FLTK 1.1.0

	- Documentation updates.
	- Fixed some memory/initialization bugs in
	  Fl_File_Chooser that valgrind caught.
	- The PNG library png_read_destroy() is deprecated and
	  does not free all of the memory allocated by
	  png_create_read_struct(). This caused a memory leak in
	  FLTK apps that loaded PNG images.
	- Added uncache() method to Fl_Image and friends.
	- Added image() methods to Fl_Menu_Item.
	- Added default_cursor() method and data to Fl_Window.
	- Fl_Group would send FL_ENTER events before FL_LEAVE
	  events, causing problems with adjacent widgets.
	- Fixed filename problems with Fl_File_Chooser -
	  changing the filename field directly or choosing files
	  from the root directory could yield interesting
	  filenames.
	- Fl_Input_ could crash if it received an empty paste
	  event.
	- The mouse pointer now changes to the I beam
	  (FL_CURSOR_INSERT) when moved over an input field or
	  text widget.
	- "make install" didn't automatically (re)compile the
	  FLUID executable.
	- Added an Fl::get_boxtype() method to get the current
	  drawing function for a specific box type.
	- Fl_Output and Fl_Multiline_Output didn't prevent
	  middle-mouse pastes.
	- Fl_JPEG_Image didn't compile out-of-the-box with Cygwin
	  due to a bug in the Cygwin JPEG library headers.
	- Fl_BMP_Image still didn't work with some old BMP files.
	- "make distclean" didn't really clean out everything.
	- Tweeked the look of the check button with a patch from
	  Albrecht Schlosser.


CHANGES IN FLTK 1.1.0rc5

	- Added "wrap" type bit to Fl_Input_, so you can now
	  have a multiline text field that wraps text.
	- Setting the value() of an output text field no longer
	  selects the text in it.
	- Output text fields now show a caret for the cursor
	  instead of the vertical bar.
	- The newButton and previewButton widgets are now public
	  members of the Fl_File_Chooser class.  This allows
	  developers to disable or hide the "new directory" and