@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.0
 
 	- Documentation updates.
+	- The Fl_Text_Display::resize() method was incorrectly
+	  flagged as protected.
 	- Fixed some memory/initialization bugs in
 	  Fl_File_Chooser that valgrind caught.
 	- The PNG library png_read_destroy() is deprecated and
